--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode development",
     "dev": "concurrently \"webpack -w\" \"nodemon server/index.js\"",
-    "start": "webpack --mode development && node server/index.js",
+    "start": "node server/index.js",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
   },
@@ -23,9 +23,9 @@
     "expect": "^1.20.2",
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
-    "lodash": "^4.15.0",
+    "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.10.2",
-    "morgan": "^1.8.1",
+    "morgan": "^1.9.1",
     "nightmare": "^3.0.1",
     "nightmare-react-utils": "^1.0.4",
     "react": "^15.3.2",
