--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode development",
     "dev": "concurrently \"webpack -w\" \"nodemon server/index.js\"",
-    "start": "node server/index.js",
+    "start": "npm run build && node server/index.js",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
   },
